[gd_scene load_steps=23 format=3 uid="uid://bdga38e85imgw"]

[ext_resource type="Script" path="res://src/combat/combat.gd" id="1_1q57p"]
[ext_resource type="PackedScene" uid="uid://b3ktuay7bbkej" path="res://src/combat/backdrop.tscn" id="1_mtl7e"]
[ext_resource type="Shader" path="res://shaders/spawn_area.gdshader" id="4_yejyx"]
[ext_resource type="Script" path="res://src/combat/hand.gd" id="5_3nvnk"]
[ext_resource type="Shader" path="res://shaders/spawn_loc.gdshader" id="5_ekx6p"]
[ext_resource type="Texture2D" uid="uid://cju5ys6csnnl3" path="res://textures/hud/mana.png" id="6_g70ey"]
[ext_resource type="Script" path="res://src/combat/hand_display.gd" id="6_ojwhk"]
[ext_resource type="Shader" path="res://shaders/fill_inner.gdshader" id="7_e0ci3"]
[ext_resource type="PackedScene" uid="uid://cunlyf5vflgsp" path="res://src/combat/reward.tscn" id="8_1gtat"]
[ext_resource type="Texture2D" uid="uid://c8qybgyq1afys" path="res://textures/hud/line_arrow_small.png" id="9_g3f32"]
[ext_resource type="Script" path="res://src/combat/opponent.gd" id="9_i3xgm"]
[ext_resource type="PackedScene" uid="uid://i6b74mlrmx1w" path="res://src/highlight.tscn" id="9_nl47w"]
[ext_resource type="Texture2D" uid="uid://vf3m2jamdf57" path="res://textures/card/back_of_card.png" id="10_nl47w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kqti8"]
size = Vector3(46, 1, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x1ilm"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_yejyx")
shader_parameter/color = Color(0.615907, 0.565972, 0.517489, 1)
shader_parameter/width = 1.0
shader_parameter/is_hovered = false
shader_parameter/hover_loc = Vector2(0.5, 0.5)
shader_parameter/x_scale = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_tdyly"]
resource_local_to_scene = true
size = Vector2(5, 6)
center_offset = Vector3(3, 0, 0)
orientation = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d88h3"]
render_priority = 0
shader = ExtResource("5_ekx6p")
shader_parameter/color = null

[sub_resource type="QuadMesh" id="QuadMesh_rcjsf"]
size = Vector2(2, 2)
center_offset = Vector3(0, 0.02, 0)
orientation = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mbfs"]
shader = ExtResource("7_e0ci3")
shader_parameter/percent = 0.427
shader_parameter/border_width = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl47w"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Curve" id="Curve_wv1k5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.87931, 0.997284), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8k5rd"]
shader = ExtResource("7_e0ci3")
shader_parameter/percent = 0.5
shader_parameter/border_width = 0.01

[node name="Combat" type="Node3D"]
script = ExtResource("1_1q57p")

[node name="Backdrop" parent="." instance=ExtResource("1_mtl7e")]
metadata/_edit_lock_ = true

[node name="Battlefield" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Battlefield"]
shape = SubResource("BoxShape3D_kqti8")

[node name="SpawnMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 0.1, -11)
material_override = SubResource("ShaderMaterial_x1ilm")
mesh = SubResource("QuadMesh_tdyly")

[node name="SpawnLocMesh" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("ShaderMaterial_d88h3")
mesh = SubResource("QuadMesh_rcjsf")

[node name="PlayerBaseTorchLocation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -11)

[node name="EnemyBaseTorchLocation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, -11)

[node name="Hand" type="Node" parent="."]
script = ExtResource("5_3nvnk")

[node name="HandDisplay" type="Control" parent="."]
process_mode = 3
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
script = ExtResource("6_ojwhk")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="HandArea" type="Control" parent="HandDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="PlayHeight" type="Control" parent="HandDisplay"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="HandSize" type="Label" parent="HandDisplay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.975
anchor_right = 0.5
anchor_bottom = 0.975
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Hand size"
mouse_filter = 1
theme_override_font_sizes/font_size = 36
text = "5/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaArea" type="Control" parent="HandDisplay"]
anchors_preset = 0
offset_left = 212.0
offset_top = 640.0
offset_right = 284.0
offset_bottom = 736.0
scale = Vector2(1.6, 1.6)
tooltip_text = "Mana"
mouse_filter = 1

[node name="BoxContainer" type="VBoxContainer" parent="HandDisplay/ManaArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HandDisplay/ManaArea/BoxContainer"]
material = SubResource("ShaderMaterial_7mbfs")
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_g70ey")
expand_mode = 1

[node name="Label" type="Label" parent="HandDisplay/ManaArea/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "7/7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highlight" parent="HandDisplay/ManaArea" instance=ExtResource("9_nl47w")]
visible = false
layout_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_nl47w")

[node name="DragLine" type="Line2D" parent="HandDisplay"]
z_index = 2
texture_repeat = 2
width = 64.0
width_curve = SubResource("Curve_wv1k5")
texture = ExtResource("9_g3f32")
texture_mode = 1

[node name="DragEnd" type="Sprite2D" parent="HandDisplay"]
z_index = 3
scale = Vector2(0.64, 0.64)
texture = ExtResource("9_g3f32")
offset = Vector2(-30, 0)

[node name="ContinueButton" type="Button" parent="HandDisplay"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.425
anchor_right = 0.9
anchor_bottom = 0.575
focus_mode = 0
theme_override_font_sizes/font_size = 48
text = "Continue"

[node name="DrawArea" type="Control" parent="HandDisplay"]
custom_minimum_size = Vector2(96, 168)
anchors_preset = 0
offset_left = 68.0
offset_top = 860.0
offset_right = 164.0
offset_bottom = 1028.0
rotation = -0.383972
tooltip_text = "Draw pile"
mouse_filter = 1

[node name="TextureRect3" type="TextureRect" parent="HandDisplay/DrawArea"]
custom_minimum_size = Vector2(96, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -12.0
offset_right = 36.0
offset_bottom = 116.0
grow_horizontal = 2
texture = ExtResource("10_nl47w")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="HandDisplay/DrawArea"]
custom_minimum_size = Vector2(96, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_top = -6.0
offset_right = 42.0
offset_bottom = 122.0
grow_horizontal = 2
texture = ExtResource("10_nl47w")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="HandDisplay/DrawArea"]
material = SubResource("ShaderMaterial_8k5rd")
custom_minimum_size = Vector2(96, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 128.0
grow_horizontal = 2
texture = ExtResource("10_nl47w")
expand_mode = 1

[node name="Label" type="Label" parent="HandDisplay/DrawArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -36.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardArea" type="Control" parent="HandDisplay"]
custom_minimum_size = Vector2(96, 168)
anchors_preset = 0
offset_left = 1756.0
offset_top = 820.0
offset_right = 1852.0
offset_bottom = 1008.0
rotation = 0.383972
tooltip_text = "Discard pile"
mouse_filter = 1

[node name="TextureRect3" type="TextureRect" parent="HandDisplay/DiscardArea"]
visible = false
custom_minimum_size = Vector2(96, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = -12.0
offset_right = 60.0
offset_bottom = 116.0
grow_horizontal = 2
texture = ExtResource("10_nl47w")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="HandDisplay/DiscardArea"]
visible = false
custom_minimum_size = Vector2(96, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = -6.0
offset_right = 54.0
offset_bottom = 122.0
grow_horizontal = 2
texture = ExtResource("10_nl47w")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="HandDisplay/DiscardArea"]
visible = false
custom_minimum_size = Vector2(96, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 128.0
grow_horizontal = 2
texture = ExtResource("10_nl47w")
expand_mode = 1

[node name="Label" type="Label" parent="HandDisplay/DiscardArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -36.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Opponent" type="Node" parent="."]
script = ExtResource("9_i3xgm")

[node name="Hand" type="Node" parent="Opponent"]
script = ExtResource("5_3nvnk")

[node name="Reward" parent="." instance=ExtResource("8_1gtat")]
visible = false
offset_left = 320.0
offset_top = 160.0
offset_right = -320.0
offset_bottom = -240.0

[node name="Lost" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1200, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Lost"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.8
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 64
text = "Wake up"

[node name="Label" type="Label" parent="Lost"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "The creatures overran you.

You feel their legs skittering around you as you're dragged along the ground.

You lose consciousness..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ViewDeckButton" type="Button" parent="."]
process_mode = 3
anchors_preset = -1
anchor_left = 0.87
anchor_top = 0.63
anchor_right = 0.97
anchor_bottom = 0.73
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "View Deck"

[node name="TutorialMenuButton" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.45
anchor_right = 0.9
anchor_bottom = 0.55
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 36
text = "Menu"

[node name="Countdown" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -36.0
offset_right = 23.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "5"

[connection signal="input_event" from="Battlefield" to="." method="_on_spawn_area_input_event"]
[connection signal="mouse_entered" from="Battlefield" to="." method="_on_spawn_area_mouse_entered"]
[connection signal="mouse_exited" from="Battlefield" to="." method="_on_spawn_area_mouse_exited"]
[connection signal="discarded" from="Hand" to="HandDisplay" method="_on_hand_discarded"]
[connection signal="draw_time_updated" from="Hand" to="HandDisplay" method="_on_hand_draw_time_updated"]
[connection signal="drew" from="Hand" to="HandDisplay" method="_on_hand_drew"]
[connection signal="mana_time_updated" from="Hand" to="HandDisplay" method="_on_hand_mana_time_updated"]
[connection signal="mana_updated" from="Hand" to="." method="_on_hand_mana_updated"]
[connection signal="mana_updated" from="Hand" to="HandDisplay" method="_on_hand_mana_updated"]
[connection signal="spawn" from="Opponent" to="." method="_on_opponent_spawn"]
[connection signal="reward_chosen" from="Reward" to="." method="_on_reward_reward_chosen"]
[connection signal="rewards_done" from="Reward" to="." method="_on_reward_rewards_done"]
[connection signal="pressed" from="Lost/Button" to="." method="_on_combat_lost_button_pressed"]
[connection signal="pressed" from="ViewDeckButton" to="." method="_on_view_deck_button_pressed"]
